@@ -1,6 +1,7 @@
 2009-10-20  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Renamed TSFE postproc hook class
+	* Moved TCEmain and CMSLayout hook classes
 
 2009-04-16  Dmitry Dulepov  <dmitry@typo3.org>
 
